//    Copyright 2019 Google Inc.
//
//    Licensed under the Apache License, Version 2.0 (the "License");
//    you may not use this file except in compliance with the License.
//    You may obtain a copy of the License at
//
//        https://www.apache.org/licenses/LICENSE-2.0
//
//    Unless required by applicable law or agreed to in writing, software
//    distributed under the License is distributed on an "AS IS" BASIS,
//    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
//    See the License for the specific language governing permissions and
//    limitations under the License.

syntax = "proto3";

package google.fhir.r4.core;

import "proto/annotations.proto";
import "proto/r4/core/datatypes.proto";

option java_multiple_files = true;
option java_package = "com.google.fhir.r4.core";
option (.google.fhir.proto.fhir_version) = R4;

// Auto-generated from StructureDefinition for Binary, last updated
// 2018-12-27T22:37:54.724+11:00. Pure binary content defined by a format other
// than FHIR. See http://hl7.org/fhir/StructureDefinition/Binary
message Binary {
  option (.google.fhir.proto.structure_definition_kind) = KIND_RESOURCE;
  option (.google.fhir.proto.fhir_structure_definition_url) =
      "http://hl7.org/fhir/StructureDefinition/Binary";

  // Logical id of this artifact
  Id id = 1;

  // Metadata about the resource
  Meta meta = 2;

  // A set of rules under which this content was created
  Uri implicit_rules = 3;

  // Language of the resource content
  Code language = 4;

  // MimeType of the binary content
  message ContentTypeCode {
    option (.google.fhir.proto.structure_definition_kind) = KIND_PRIMITIVE_TYPE;
    option (.google.fhir.proto.fhir_valueset_url) =
        "http://hl7.org/fhir/ValueSet/mimetypes";
    option (.google.fhir.proto.fhir_profile_base) =
        "http://hl7.org/fhir/StructureDefinition/code";

    // Field 1 reserved to allow enumeration in the future.
    reserved 1;

    String id = 2;

    repeated Extension extension = 3;

    // This valueset is not enumerable, and so is represented as a string.
    string value = 4;
  }
  ContentTypeCode content_type = 5
      [(.google.fhir.proto.validation_requirement) = REQUIRED_BY_FHIR];

  // Identifies another resource to use as proxy when enforcing access control
  Reference security_context = 6
      [(.google.fhir.proto.valid_reference_type) = "Resource"];

  // The actual content
  Base64Binary data = 7;
}
